# aranet-cloud-homeassistant

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  hacs.json  info.md  pyproject.toml  requirements_test.txt
.github/: copilot-instructions.md
.github/workflows/: ci.yml
custom_components/aranet_cloud/: __init__.py  binary_sensor.py  config_flow.py  const.py  coordinator.py  diagnostics.py  icons.json  manifest.json  quality_scale.yaml  sensor.py  strings.json
custom_components/aranet_cloud/translations/: en.json
tests/: __init__.py  conftest.py  fixtures_data.py  test_binary_sensor.py  test_config_flow.py  test_coordinator.py  test_diagnostics.py  test_init.py  test_sensor.py
